--- a/app/package.json
+++ b/app/package.json
@@ -9,11 +9,14 @@
   },
   "dependencies": {
     "@vunk/form": "^0.0.1-alpha.39",
+    "@vunk/skzz": "0.0.0-alpha.43",
+    "js-cookie": "^3.0.1",
     "pinia": "^2.0.21",
     "qs": "^6.11.0",
     "vue-router": "^4.1.5"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.2",
     "@types/qs": "^6.9.7",
     "@vitejs/plugin-legacy": "^1.8.2",
     "@vitejs/plugin-vue": "^2.3.3",
@@ -23,6 +26,6 @@
     "unocss-preset-vunk": "^1.0.1",
     "vite-plugin-externals": "^0.5.0",
     "vite-plugin-svg-icons": "^2.0.1",
-    "vue-tsc": "^0.40.5"
+    "vue-tsc": "^1.0.9"
   }
 }
