--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@vunk-gsap/components",
+  "name": "@skzz-platform/components",
   "scripts": {
     "build": "gulp -f gulpfile.ts"
   },
