--- a/docs/package.json
+++ b/docs/package.json
@@ -19,7 +19,7 @@
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
     "prism-theme-vars": "^0.2.3",
-    "@vunk/gsap": "workspace:*"
+    "@skzz/platform": "workspace:*"
   },
   "devDependencies": {
     "@crowdin/cli": "^3.7.8",
