--- a/app/package.json
+++ b/app/package.json
@@ -8,6 +8,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@vueuse/core": "^8.7.5",
     "@vunk/form": "^0.0.1-alpha.39",
     "@vunk/skzz": "0.0.0-alpha.50",
     "js-cookie": "^3.0.1",
