--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,7 @@
     "@vueuse/core": "^8.7.5",
     "@vunk/form": "^0.0.1-alpha.39",
     "@vunk/skzz": "0.0.0-alpha.50",
+    "deepdash-es": "^5.3.9",
     "js-cookie": "^3.0.1",
     "pinia": "^2.0.21",
     "qs": "^6.11.0",
