--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
     "deepdash-es": "^5.3.9",
     "js-cookie": "^3.0.1",
     "pinia": "^2.0.21",
+    "pinia-plugin-persist": "^1.0.0",
     "qs": "^6.11.0",
     "vue-router": "^4.1.5"
   },
