--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
     "@vunk/skzz": "0.0.0-alpha.50",
     "deepdash-es": "^5.3.9",
     "js-cookie": "^3.0.1",
+    "path-to-regexp": "^6.2.1",
     "pinia": "^2.0.21",
     "pinia-plugin-persist": "^1.0.0",
     "qs": "^6.11.0",
