--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
 		"@element-plus/utils": "workspace:*",
 		"@skzz-platform/components": "workspace:*",
 		"@skzz-platform/shared": "workspace:*",
+		"@skzz-platform/theme": "workspace:*",
 		"@vunk/core": "0.0.0-alpha.60",
+		"@vunk/form": "^0.0.1-alpha.39",
 		"@skzz/platform": "workspace:*",
 		"element-plus": "npm:element-plus@latest",
 		"vue": "^3.2.38"
