--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
 		"@skzz-platform/components": "workspace:*",
 		"@skzz-platform/shared": "workspace:*",
 		"@skzz-platform/theme": "workspace:*",
-		"@vunk/core": "0.0.0-alpha.60",
-		"@vunk/form": "^0.0.1-alpha.39",
 		"@skzz/platform": "workspace:*",
+		"@vunk/core": "0.0.0-alpha.68",
+		"@vunk/form": "0.0.1-alpha.42",
 		"element-plus": "npm:element-plus@latest",
 		"vue": "^3.2.38"
 	},
