--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 		"@lib-env/eslint-config": "workspace:*",
 		"@lib-env/path": "workspace:*",
 		"@lib-env/shared": "workspace:*",
+		"@types/chroma-js": "^2.1.4",
 		"@types/gulp": "^4.0.9",
 		"@types/node": "^18.0.4",
 		"consola": "^2.15.3",
@@ -30,6 +31,7 @@
 		"@skzz/platform": "workspace:*",
 		"@vunk/core": "0.0.0-alpha.68",
 		"@vunk/form": "0.0.1-alpha.43",
+		"chroma-js": "^2.4.2",
 		"element-plus": "npm:element-plus@latest",
 		"vue": "^3.2.38"
 	},
