--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
 		"gulp": "^4.0.2",
 		"gulp-concat": "^2.6.1",
 		"mri": "^1.2.0",
+		"pinia": "^2.0.21",
+    "pinia-plugin-persist": "^1.0.0",
 		"sucrase": "^3.24.0",
 		"tsx": "^3.8.0",
 		"unbuild": "^0.7.4",
@@ -25,8 +27,10 @@
 	},
 	"dependencies": {
 		"@element-plus/utils": "workspace:*",
+		"@skzz-platform/api": "workspace:*",
 		"@skzz-platform/components": "workspace:*",
 		"@skzz-platform/shared": "workspace:*",
+		"@skzz-platform/stores": "workspace:*",
 		"@skzz-platform/theme": "workspace:*",
 		"@skzz/platform": "workspace:*",
 		"@vueuse/core": "^9.12.0",
