--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"@vueuse/core": "^9.12.0",
 		"@vunk/core": "0.0.0-alpha.70",
 		"@vunk/form": "0.0.1-alpha.43",
+		"@vunk/skzz": "0.0.0-alpha.60",
 		"chroma-js": "^2.4.2",
 		"element-plus": "npm:element-plus@latest",
 		"vue": "^3.2.38"
