--- a/package.json
+++ b/package.json
@@ -18,18 +18,19 @@
 		"gulp-concat": "^2.6.1",
 		"mri": "^1.2.0",
 		"pinia": "^2.0.21",
-    "pinia-plugin-persist": "^1.0.0",
+		"pinia-plugin-persist": "^1.0.0",
 		"sucrase": "^3.24.0",
 		"tsx": "^3.8.0",
 		"unbuild": "^0.7.4",
+		"unplugin-vue-jsx": "^0.1.2",
 		"vite": "^4.1.1",
 		"vitest": "^0.18.1"
 	},
 	"dependencies": {
 		"@element-plus/utils": "workspace:*",
 		"@skzz-platform/api": "workspace:*",
-		"@skzz-platform/composables": "workspace:*",
 		"@skzz-platform/components": "workspace:*",
+		"@skzz-platform/composables": "workspace:*",
 		"@skzz-platform/shared": "workspace:*",
 		"@skzz-platform/stores": "workspace:*",
 		"@skzz-platform/theme": "workspace:*",
