--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
 		"publish": "gulp -f scripts/publish.ts",
 		"cc": "gulp -f scripts/create/component/index.ts",
 		"ccd": "gulp -f scripts/create/component-docs/index.ts",
+		"app:preview": "gulp -f scripts/app/preview.ts",
+		"app:init-arcgis": "gulp -f scripts/app/init-arcgis.ts",
 		"run:test": "gulp -f scripts/test.ts",
 		"rm:nm": "find . -name \"node_modules\" -type d -prune -exec rm -rf '{}' +"
 	}
