--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -10,7 +10,8 @@
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "types": [
-      "node"
+      "node",
+      "arcgis-js-api",
     ],
     "baseUrl": ".",
     "paths": {
