--- a/app/.env.development
+++ b/app/.env.development
@@ -1,4 +1,3 @@
 NODE_ENV=development
 VITE_BASE_URL=""
-VITE_PLATFORM_URL="http://t1.zjsophon.com:10000"
-VITE_BASE_API="/"
+VITE_BASE_API="http://t1.zjsophon.com:10000/scene-server"
