--- a/docs/package.json
+++ b/docs/package.json
@@ -35,7 +35,7 @@
     "octokit": "^2.0.3",
     "prismjs": "^1.28.0",
     "sass": "^1.53.0",
-    "unocss": "0.33.5",
+    "unocss": "^0.50.6",
     "unplugin-icons": "^0.14.6",
     "unplugin-vue-components": "^0.20.1",
     "unplugin-vue-define-options": "^0.6.1",
