--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"sucrase": "^3.24.0",
 		"tsx": "^3.8.0",
 		"unbuild": "^0.7.4",
+		"unocss": "^0.50.6",
 		"unplugin-vue-jsx": "^0.1.2",
 		"vite": "^4.1.1",
 		"vitest": "^0.18.1"
