--- a/app/package.json
+++ b/app/package.json
@@ -23,6 +23,7 @@
     "@vitejs/plugin-vue-jsx": "^1.3.10",
     "@vue/compiler-sfc": "^3.2.38",
     "unocss-preset-vunk": "^1.0.3",
+    "vite": "^4.2.1",
     "vite-plugin-externals": "^0.6.2",
     "vite-plugin-svg-icons": "^2.0.1",
     "vue-tsc": "^1.0.9"
