--- a/app/package.json
+++ b/app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@skzz/platform/app",
+  "name": "@skzz-template/app",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
@@ -8,7 +8,6 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "@zzg6/flow": "0.0.0-alpha.33",
     "deepdash-es": "^5.3.9",
     "js-cookie": "^3.0.1",
     "path-to-regexp": "^6.2.1",
