--- a/app/.env.development
+++ b/app/.env.development
@@ -1,3 +1,5 @@
 NODE_ENV=development
 VITE_BASE_URL=""
-VITE_BASE_API="http://t1.zjsophon.com:10000/zz/scene-server"
+VITE_BASE_API="/data"
+VITE_DEFAULT_PLATFORM_API="http://t1.zjsophon.com:10000/zz/scene-server"
+
