--- a/app/.env.production
+++ b/app/.env.production
@@ -1,2 +1,4 @@
-VITE_BASE_URL=''
-VITE_BASE_API="http://t1.zjsophon.com:10000/scene-server"
+VITE_BASE_URL=""
+VITE_BASE_API="/data"
+VITE_DEFAULT_PLATFORM_API="http://t1.zjsophon.com:10000/zz/scene-server"
+
