--- a/app/.env.skzz
+++ b/app/.env.skzz
@@ -1,1 +1,3 @@
-VITE_BASE_URL="/skzz"
+VITE_BASE_URL="/zz"
+VITE_BASE_API="/data"
+VITE_DEFAULT_PLATFORM_API="http://t1.zjsophon.com:10000/zz/scene-server"
