修改配置文件

--- a/app/.env.skzz
+++ b/app/.env.skzz
@@ -1,1 +1,3 @@
-VITE_BASE_URL="/skzz"
+NODE_ENV=development
+VITE_BASE_URL="/zz-platform-config"
+VITE_BASE_API="http://t1.zjsophon.com:10000/zz/zz-server"
