--- a/app/.env.development
+++ b/app/.env.development
@@ -1,4 +1,4 @@
 NODE_ENV=development
 VITE_BASE_URL=""
-VITE_APP_TITLE="智子快开平台-开发"
+VITE_APP_TITLE="智子快开平台-开发模式"
 VITE_BASE_API="http://t1.zjsophon.com:10000/zz/zz-server"
