--- a/internal/eslint-config/package.json
+++ b/internal/eslint-config/package.json
@@ -12,12 +12,13 @@
   },
   "peerDependencies": {
     "eslint": "^8.35.0",
-    "eslint-plugin-vue": "^9.9.0",
-    "eslint-define-config": "^1.15.0"
+    "eslint-define-config": "^1.15.0",
+    "eslint-plugin-vue": "^9.9.0"
   },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^5.54.0",
     "@typescript-eslint/parser": "^5.54.0",
+    "eslint-plugin-import": "^2.27.5",
     "typescript": "^4.9.5"
   }
 }
