--- a/app/.env.skzz
+++ b/app/.env.skzz
@@ -1,3 +1,3 @@
-VITE_BASE_URL="/zz-platform-config"
+VITE_BASE_URL="/zz/zz-platform-config"
 VITE_BASE_API="http://t1.zjsophon.com:10000/zz/zz-server"
 VITE_APP_TITLE="智子快开平台-测试模式"
