--- a/package.json
+++ b/package.json
@@ -6,28 +6,27 @@
 		"@lib-env/eslint-config": "workspace:*",
 		"@lib-env/path": "workspace:*",
 		"@lib-env/shared": "workspace:*",
-		"@types/arcgis-js-api": "^4.25.0",
-		"@types/chroma-js": "^2.1.4",
-		"@types/gulp": "^4.0.9",
+		"@types/gulp": "^4.0.17",
 		"@types/node": "^18.0.4",
-		"consola": "^2.15.3",
-		"eslint": "^8.35.0",
-		"eslint-define-config": "^1.5.1",
-		"eslint-plugin-vue": "^9.9.0",
-		"fast-glob": "^3.2.11",
+		"arcgis-js-api": "^4.28.10",
+		"consola": "^3.2.3",
+		"eslint": "^8.56.0",
+		"eslint-define-config": "^2.1.0",
+		"eslint-plugin-vue": "^9.19.2",
+		"fast-glob": "^3.3.2",
 		"gulp": "^4.0.2",
 		"gulp-concat": "^2.6.1",
 		"mri": "^1.2.0",
-		"pinia": "^2.0.21",
+		"pinia": "^2.1.7",
 		"pinia-plugin-persist": "^1.0.0",
-		"sass": "^1.60.0",
-		"sucrase": "^3.24.0",
-		"tsx": "^3.8.0",
-		"unbuild": "^0.7.4",
-		"unocss": "^0.50.6",
-		"unplugin-vue-jsx": "^0.1.2",
-		"vite": "^4.2.1",
-		"vitest": "^0.18.1"
+		"sass": "^1.69.7",
+		"sucrase": "^3.35.0",
+		"tsx": "^4.7.0",
+		"unbuild": "^2.0.0",
+		"unocss": "^0.58.3",
+		"unplugin-vue-jsx": "^0.2.2",
+		"vite": "^5.0.11",
+		"vitest": "^1.1.3"
 	},
 	"dependencies": {
 		"@arcgis/core": "^4.25.5",
@@ -39,16 +38,15 @@
 		"@skzz-template/shared": "workspace:*",
 		"@skzz-template/stores": "workspace:*",
 		"@skzz-template/theme": "workspace:*",
-		"@skzz/platform": "0.0.0-alpha.64",
+		"@skzz/platform": "0.0.0-alpha.69",
 		"@skzz/template": "workspace:*",
-		"@vuesri/core": "^0.0.45",
-		"@vueuse/core": "^9.12.0",
-		"@vunk/core": "0.0.0-alpha.106",
-		"@vunk/form": "^1.1.52",
-		"@vunk/skzz": "0.0.0-alpha.106",
-		"chroma-js": "^2.4.2",
+		"@vuesri/core": "^0.0.51",
+		"@vueuse/core": "^10.7.1",
+		"@vunk/core": "0.0.0-alpha.111",
+		"@vunk/form": "^1.1.65",
+		"@vunk/skzz": "0.0.0-alpha.109",
 		"element-plus": "npm:element-plus@latest",
-		"vue": "^3.3.6"
+		"vue": "^3.4.7"
 	},
 	"scripts": {
 		"dev": "pnpm run -C app dev",
