--- a/internal/build-utils/package.json
+++ b/internal/build-utils/package.json
@@ -10,10 +10,11 @@
     "stub": "unbuild --stub"
   },
   "devDependencies": {
-    "@pnpm/types": "^8.4.0",
-    "@vue/compiler-sfc": "^3.2.37",
-    "rollup-plugin-css-only": "^3.1.0",
+    "@pnpm/types": "^9.4.2",
+    "@vue/compiler-sfc": "^3.4.8",
+    "rollup-plugin-css-only": "^4.5.2",
+    "rollup-plugin-esbuild": "^6.1.0",
     "rollup-plugin-vue": "^6.0.0",
-    "ts-morph": "^15.1.0"
+    "ts-morph": "^21.0.1"
   }
 }
