--- a/docs/package.json
+++ b/docs/package.json
@@ -9,6 +9,7 @@
     "@vunk/gsap": "0.0.0-alpha.3",
     "deepdash-es": "^5.3.9",
     "gsap": "^3.12.4",
+    "prism-theme-vars": "^0.2.4",
     "vike": "0.4.153",
     "vike-vue": "^0.5.3"
   },
