--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
 		"ccd": "gulp -f scripts/create/component-docs/index.ts",
 		"app:preview": "gulp -f scripts/app/preview.ts",
 		"app:init-arcgis": "gulp -f scripts/app/init-arcgis.ts",
-		"run:test": "gulp -f scripts/test.ts",
+		"run:task": "gulp -f scripts/task.ts",
 		"rm:nm": "find . -name \"node_modules\" -type d -prune -exec rm -rf '{}' +"
 	}
 }
