ci: rollup build

--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
 		"@lib-env/shared": "workspace:*",
 		"@types/gulp": "^4.0.17",
 		"@types/node": "^18.0.4",
+		"@vitejs/plugin-vue": "^5.0.3",
+    "@vitejs/plugin-vue-jsx": "^3.1.0",
 		"@vue/compiler-sfc": "^3.4.14",
 		"arcgis-js-api": "^4.28.10",
 		"consola": "^3.2.3",
@@ -20,12 +22,12 @@
 		"mri": "^1.2.0",
 		"pinia": "^2.1.7",
 		"pinia-plugin-persist": "^1.0.0",
+		"rollup": "^4.12.0",
 		"sass": "^1.69.7",
 		"sucrase": "^3.35.0",
 		"tsx": "^4.7.0",
 		"unbuild": "^2.0.0",
 		"unocss": "^0.58.3",
-		"unplugin-vue-jsx": "^0.2.2",
 		"vite": "^5.0.11",
 		"vitest": "^1.1.3"
 	},
