--- a/docs/package.json
+++ b/docs/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@vuesri-core/app",
+  "name": "@skzz-template/docs",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -10,8 +10,8 @@
     "deepdash-es": "^5.3.9",
     "gsap": "^3.12.4",
     "prism-theme-vars": "^0.2.4",
-    "vike": "0.4.156",
-    "vike-vue": "^0.5.4"
+    "vike": "0.4.165",
+    "vike-vue": "^0.6.3"
   },
   "devDependencies": {
     "@iconify-json/ri": "^1.1.4",
@@ -22,6 +22,6 @@
     "unplugin-vue-markdown": "^0.25.2",
     "vite-plugin-inspect": "^0.8.1",
     "vitepress": "1.0.0-rc.33",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.3.0"
   }
 }
