--- a/package.json
+++ b/package.json
@@ -7,48 +7,48 @@
 		"@lib-env/path": "workspace:*",
 		"@lib-env/shared": "workspace:*",
 		"@types/gulp": "^4.0.17",
-		"@types/node": "^18.0.4",
-		"@vitejs/plugin-vue": "^5.0.3",
+		"@types/node": "18.0.4",
+		"@vitejs/plugin-vue": "^5.0.4",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
-		"@vue/compiler-sfc": "^3.4.14",
-		"arcgis-js-api": "^4.28.10",
+		"@vue/compiler-sfc": "^3.4.21",
+		"arcgis-js-api": "^4.29.7",
 		"consola": "^3.2.3",
-		"eslint": "^8.56.0",
+		"eslint": "^8.57.0",
 		"eslint-define-config": "^2.1.0",
-		"eslint-plugin-vue": "^9.19.2",
+		"eslint-plugin-vue": "^9.23.0",
 		"fast-glob": "^3.3.2",
 		"gulp": "^4.0.2",
 		"gulp-concat": "^2.6.1",
 		"mri": "^1.2.0",
 		"pinia": "^2.1.7",
 		"pinia-plugin-persist": "^1.0.0",
-		"rollup": "^4.12.0",
-		"sass": "^1.69.7",
+		"rollup": "^4.13.0",
+		"sass": "^1.71.1",
 		"sucrase": "^3.35.0",
-		"tsx": "^4.7.0",
+		"tsx": "^4.7.1",
 		"unbuild": "^2.0.0",
-		"unocss": "^0.58.3",
-		"vite": "^5.0.11",
-		"vitest": "^1.1.3"
+		"unocss": "^0.58.5",
+		"vite": "^5.1.6",
+		"vitest": "^1.3.1"
 	},
 	"dependencies": {
-		"@arcgis/core": "^4.25.5",
-		"@element-plus/icons-vue": "^2.1.0",
+		"@arcgis/core": "^4.29.7",
+		"@element-plus/icons-vue": "^2.3.1",
 		"@skzz-template/api": "workspace:*",
 		"@skzz-template/components": "workspace:*",
 		"@skzz-template/composables": "workspace:*",
 		"@skzz-template/shared": "workspace:*",
 		"@skzz-template/stores": "workspace:*",
 		"@skzz-template/theme": "workspace:*",
-		"@skzz/platform": "0.0.0-alpha.71",
+		"@skzz/platform": "0.0.0-alpha.73",
 		"@skzz/template": "workspace:*",
-		"@vuesri/core": "^1.0.0",
-		"@vueuse/core": "^10.7.1",
-		"@vunk/core": "0.0.0-alpha.111",
-		"@vunk/form": "^1.1.65",
-		"@vunk/skzz": "0.0.0-alpha.109",
+		"@vuesri/core": "^1.0.9",
+		"@vueuse/core": "^10.9.0",
+		"@vunk/core": "0.0.0-alpha.114",
+		"@vunk/form": "^1.1.73",
+		"@vunk/skzz": "0.0.0-alpha.110",
 		"element-plus": "npm:element-plus@latest",
-		"vue": "^3.4.14"
+		"vue": "^3.4.21"
 	},
 	"scripts": {
 		"dev": "pnpm run -C app dev",
