--- a/app/package.json
+++ b/app/package.json
@@ -8,6 +8,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@imengyu/vue3-context-menu": "^1.3.8",
     "deepdash-es": "^5.3.9",
     "path-to-regexp": "^6.2.1",
     "vue-router": "^4.3.0"
