--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"@types/gulp": "^4.0.17",
 		"@types/node": "18.0.4",
 		"@vitejs/plugin-vue": "^5.0.4",
-    "@vitejs/plugin-vue-jsx": "^3.1.0",
+		"@vitejs/plugin-vue-jsx": "^3.1.0",
 		"@vue/compiler-sfc": "^3.4.21",
 		"arcgis-js-api": "^4.29.7",
 		"consola": "^3.2.3",
@@ -29,6 +29,7 @@
 		"unbuild": "^2.0.0",
 		"unocss": "^0.58.5",
 		"vite": "^5.1.6",
+		"vite-plugin-vue-devtools": "^7.0.27",
 		"vitest": "^1.3.1"
 	},
 	"dependencies": {
