--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 		"@lib-env/app-utils": "workspace:*",
 		"@lib-env/build-constants": "workspace:*",
 		"@lib-env/build-utils": "workspace:*",
+		"@lib-env/eslint-config": "workspace:*",
 		"@lib-env/path": "workspace:*",
 		"@lib-env/shared": "workspace:*",
 		"@types/gulp": "^4.0.17",
@@ -11,6 +12,7 @@
 		"@vitejs/plugin-vue-jsx": "^3.1.0",
 		"@vue/compiler-sfc": "^3.4.21",
 		"arcgis-js-api": "^4.29.7",
+		"eslint": "^9.1.1",
 		"fast-glob": "^3.3.2",
 		"gulp": "^4.0.2",
 		"gulp-concat": "^2.6.1",
@@ -25,17 +27,7 @@
 		"unocss": "^0.58.5",
 		"vite": "^5.1.6",
 		"vite-plugin-vue-devtools": "^7.0.27",
-		"vitest": "^1.3.1",
-		"@eslint/eslintrc": "^3.0.2",
-    "@eslint/js": "^9.1.1",
-    "@typescript-eslint/eslint-plugin": "^7.7.1",
-    "eslint": "^9.1.1",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-n": "^16.6.2",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-vue": "^9.25.0",
-    "globals": "^15.0.0",
-    "typescript-eslint": "^7.7.1"
+		"vitest": "^1.3.1"
 	},
 	"dependencies": {
 		"@arcgis/core": "^4.29.7",
