--- a/docs/package.json
+++ b/docs/package.json
@@ -10,8 +10,8 @@
     "deepdash-es": "^5.3.9",
     "gsap": "^3.12.5",
     "prism-theme-vars": "^0.2.4",
-    "vike": "0.4.165",
-    "vike-vue": "^0.6.3"
+    "vike": "0.4.171",
+    "vike-vue": "^0.6.5"
   },
   "devDependencies": {
     "@iconify-json/ri": "^1.1.20",
@@ -21,7 +21,7 @@
     "unplugin-vue-components": "^0.26.0",
     "unplugin-vue-markdown": "=0.25.2",
     "vite-plugin-inspect": "^0.8.3",
-    "vitepress": "1.0.0-rc.45",
+    "vitepress": "1.1.4",
     "vue-router": "^4.3.0"
   }
 }
