--- a/internal/eslint-config/package.json
+++ b/internal/eslint-config/package.json
@@ -19,6 +19,7 @@
     "eslint-plugin-vue": "^9.25.0",
     "globals": "^15.0.0",
     "typescript": "^5.4.5",
-    "typescript-eslint": "^7.7.1"
+    "typescript-eslint": "^7.8.0",
+    "vue-eslint-parser": "^9.4.2"
   }
 }
