--- a/internal/app-utils/package.json
+++ b/internal/app-utils/package.json
@@ -18,6 +18,6 @@
     "picocolors": "^1.0.0",
     "markdown-it-container": "^4.0.0",
     "shikiji-transformers": "^0.10.2",
-    "vitepress": "1.0.0-rc.45"
+    "vitepress": "1.1.4"
   }
 }
