--- a/docs/package.json
+++ b/docs/package.json
@@ -19,9 +19,9 @@
     "markdown-it-anchor": "^8.6.7",
     "unplugin-icons": "^0.18.1",
     "unplugin-vue-components": "^0.26.0",
-    "unplugin-vue-markdown": "=0.25.2",
+    "unplugin-vue-markdown": "^0.26.2",
     "vite-plugin-inspect": "^0.8.3",
-    "vitepress": "1.1.4",
-    "vue-router": "^4.3.0"
+    "vitepress": "^1.1.4",
+    "vue-router": "^4.3.2"
   }
 }
