--- a/app-ssr/package.json
+++ b/app-ssr/package.json
@@ -2,7 +2,9 @@
   "name": "@skzz-template/app-ssr",
   "version": "0.0.0",
   "scripts": {
-    "serve": "set DEBUG=http & tsx ./server/bin/www.ts"
+    "dev": "cross-env DEBUG=http tsx ./server/bin/www.ts",
+    "build": "vite build",
+    "preview": "npm run build & cross-env NODE_ENV=production tsx ./server/bin/www.ts"
   },
   "dependencies": {
     "cookie-parser": "^1.4.6",
@@ -16,6 +18,7 @@
     "@types/debug": "^4.1.12",
     "@types/express": "^4.17.21",
     "@types/morgan": "^1.9.9",
+    "cross-env": "^7.0.3",
     "tsx": "^4.9.3"
   }
 }
