--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
 		"tsx": "^4.7.1",
 		"unbuild": "^2.0.0",
 		"unocss": "^0.58.5",
+		"unplugin-vue-markdown": "^0.26.2",
+		"vike": "0.4.171",
 		"vite": "^5.1.6",
 		"vite-plugin-vue-devtools": "^7.0.27",
 		"vitest": "^1.3.1"
