feat: ssr rest fetch

--- a/app-ssr/.env.local
+++ b/app-ssr/.env.local
@@ -1,3 +1,4 @@
-AUTH_SECRET='xFFDujymllYaHtIZbn+dMK6/QqsZbPm+mDNhptSDG8A='
-SERVER_PORT=3000
 SERVER_HMR_PORT=24678
+SERVER_PORT=3000
+VITE_SSR_API_URL=http://localhost:3000
+
