--- a/internal/build-utils/package.json
+++ b/internal/build-utils/package.json
@@ -1,9 +1,14 @@
 {
   "name": "@lib-env/build-utils",
   "private": true,
-  "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
-  "main": "./dist/index.cjs",
+  "exports": {
+    ".": {
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.cjs",
+      "types": "./dist/index.d.ts"
+    }
+  },
   "scripts": {
     "build": "unbuild",
     "dev": "pnpm run stub",
