--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -35,7 +35,7 @@
     "src/**/*.vue", 
     "typings/**/*.d.ts",
     "../typings/**/*.d.ts",
-    "vite.config.ts"
+    "vite.config.mts"
   ],
   "exclude": [
     "node_modules"
