--- a/docs/package.json
+++ b/docs/package.json
@@ -21,7 +21,6 @@
     "unplugin-vue-components": "^0.26.0",
     "unplugin-vue-markdown": "^0.26.2",
     "vite-plugin-inspect": "^0.8.3",
-    "vitepress": "^1.1.4",
-    "vue-router": "^4.3.2"
+    "vitepress": "^1.1.4"
   }
 }
