--- a/internal/app-utils/package.json
+++ b/internal/app-utils/package.json
@@ -1,23 +1,22 @@
 {
   "name": "@lib-env/app-utils",
   "private": true,
-  "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
-  "main": "./dist/index.cjs",
+  "exports": {
+    ".": {
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.cjs",
+      "types": "./dist/index.d.ts"
+    }
+  },
   "scripts": {
     "build": "unbuild",
     "dev": "pnpm run stub",
     "stub": "unbuild --stub"
   },
-  "dependencies": {
-    "unocss-preset-vunk": "^1.0.3"
-  },
   "devDependencies": {
     "@types/markdown-it-container": "^2.0.9",
-    "shikiji": "^0.10.2",
-    "picocolors": "^1.0.0",
     "markdown-it-container": "^4.0.0",
-    "shikiji-transformers": "^0.10.2",
-    "vitepress": "1.1.4"
+    "vitepress": "^1.2.3"
   }
 }
