feat: add vuesri/three

--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -26,7 +26,11 @@
       ]
     },
     "lib": ["esnext", "dom"],
-    "rootDir": "../"
+    "rootDir": "../",
+
+
+    "experimentalDecorators": true,
+    "useDefineForClassFields": false
   },
   "include": [
     "src/**/*.ts", 
