--- a/tsconfig.env.json
+++ b/tsconfig.env.json
@@ -17,6 +17,8 @@
       "ESNext", "DOM",
     ],
     "allowSyntheticDefaultImports": true,
+    "experimentalDecorators": true,
+    "useDefineForClassFields": false
   },
   "include": [
     "typings/*.d.ts",
