--- a/docs/package.json
+++ b/docs/package.json
@@ -10,13 +10,14 @@
     "deepdash-es": "^5.3.9",
     "gsap": "^3.12.5",
     "prism-theme-vars": "^0.2.4",
-    "vike": "0.4.171",
-    "vike-vue": "^0.6.5"
+    "vike": "0.4.177",
+    "vike-vue": "^0.7.5"
   },
   "devDependencies": {
     "@iconify-json/ri": "^1.1.20",
     "@mdit-vue/shared": "^2.0.0",
     "markdown-it-anchor": "^8.6.7",
+    "markdown-it-container": "^4.0.0",
     "unplugin-icons": "^0.18.1",
     "unplugin-vue-components": "^0.26.0",
     "unplugin-vue-markdown": "^0.26.2",
