--- a/tsconfig.env.json
+++ b/tsconfig.env.json
@@ -24,7 +24,7 @@
     "typings/*.d.ts",
     "internal/**/*.ts",
     "packages/**/*.vue",
-    "packages/**/*.ts",
+    "packages/**/*.ts"
   ],
   "exclude": [
     "dist"
