--- a/app-ssr/package.json
+++ b/app-ssr/package.json
@@ -10,6 +10,7 @@
     "cookie-parser": "^1.4.6",
     "debug": "^4.3.4",
     "express": "^4.19.2",
+    "http-proxy-middleware": "^3.0.2",
     "morgan": "^1.10.0",
     "pug": "^3.0.2"
   },
