--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"unplugin-vue-markdown": "^0.26.2",
 		"vike": "0.4.193",
 		"vite": "^5.1.6",
+		"vite-plugin-external": "^4.3.1",
 		"vite-plugin-vue-devtools": "^7.0.27",
 		"vitest": "^1.3.1"
 	},
