--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "rm:nm": "find . -name \"node_modules\" -type d -prune -exec rm -rf '{}' +"
   },
   "dependencies": {
-    "@arcgis/core": "^4.29.7",
+    "@arcgis/core": "^4.31.5",
     "@element-plus/icons-vue": "^2.3.1",
     "@skzz-template/api": "workspace:*",
     "@skzz-template/components": "workspace:*",
@@ -31,52 +31,53 @@
     "@skzz-template/theme": "workspace:*",
     "@skzz/platform": "0.0.0-alpha.73",
     "@skzz/template": "workspace:*",
-    "@vuesri/core": "^1.0.9",
-    "@vuesri/three": "0.0.0-alpha.8",
-    "@vueuse/core": "^10.9.0",
-    "@vunk/core": "0.0.0-alpha.121",
-    "@vunk/form": "^1.1.77",
-    "@vunk/shared": "^0.5.35",
+    "@vuesri/core": "^1.0.59",
+    "@vuesri/three": "0.0.4",
+    "@vueuse/core": "^11.3.0",
+    "@vunk/core": "1.2.1",
+    "@vunk/form": "^1.4.4",
+    "@vunk/plus": "^0.2.0",
+    "@vunk/shared": "^0.5.37",
     "@vunk/skzz": "0.0.0-alpha.111",
     "element-plus": "npm:element-plus@latest",
-    "three": "^0.165.0",
-    "vue": "^3.4.21"
+    "three": "^0.170.0",
+    "vue": "^3.5.13"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^3.9.2",
     "@lib-env/build-constants": "workspace:*",
     "@lib-env/build-utils": "workspace:*",
-    "@lib-env/eslint-config": "workspace:*",
     "@lib-env/path": "workspace:*",
     "@types/gulp": "^4.0.17",
     "@types/node": "18.0.4",
     "@types/three": "^0.165.0",
-    "@vitejs/plugin-vue": "^5.0.4",
-    "@vitejs/plugin-vue-jsx": "^3.1.0",
-    "@vue/compiler-sfc": "^3.4.21",
-    "arcgis-js-api": "^4.29.7",
+    "@vitejs/plugin-vue": "^5.2.0",
+    "@vitejs/plugin-vue-jsx": "^4.1.0",
+    "@vue/compiler-sfc": "^3.5.13",
+    "arcgis-js-api": "^4.31.5",
     "comment-parser": "^1.4.1",
-    "eslint": "^9.5.0",
+    "eslint": "^9.15.0",
     "eslint-plugin-oxlint": "^0.13.0",
     "fast-glob": "^3.3.2",
     "gulp": "^5.0.0",
     "gulp-concat": "^2.6.1",
     "mri": "^1.2.0",
     "oxlint": "^0.13.0",
-    "pinia": "^2.1.7",
+    "pinia": "^2.2.6",
     "pinia-plugin-persist": "^1.0.0",
-    "rollup": "^4.13.0",
-    "sass": "^1.71.1",
+    "rollup": "^4.27.3",
+    "sass": "^1.81.0",
     "sucrase": "^3.35.0",
-    "tsx": "^4.7.1",
+    "tsx": "^4.19.2",
     "unbuild": "^2.0.0",
-    "unocss": "^0.58.5",
+    "unocss": "^0.64.1",
     "unplugin-oxlint": "^0.7.3",
     "unplugin-vue-markdown": "^0.26.2",
-    "vike": "0.4.193",
-    "vite": "^5.1.6",
+    "vike": "0.4.204",
+    "vike-vue": "^0.8.5",
+    "vite": "^5.4.11",
     "vite-plugin-external": "^4.3.1",
-    "vite-plugin-vue-devtools": "^7.0.27",
-    "vitest": "^1.3.1"
+    "vite-plugin-vue-devtools": "^7.6.4",
+    "vitest": "^2.1.5"
   }
 }
