--- a/tsconfig.env.json
+++ b/tsconfig.env.json
@@ -1,24 +1,25 @@
 {
   "compilerOptions": {
-    "noUnusedLocals": true,
-    "module": "ESNext",
     "composite": true,
-    "noImplicitAny": false,
-    "removeComments": true,
-    "moduleResolution": "node",
-    "disableSizeLimit": true,
-    "esModuleInterop": true,
-    "jsx": "preserve",
-    "noLib": false,
     "target": "ESNext",
-    "sourceMap": true,
-    "strictNullChecks": true,
+    "jsx": "preserve",
     "lib": [
-      "ESNext", "DOM",
+      "ESNext",
+      "DOM"
     ],
-    "allowSyntheticDefaultImports": true,
+    "noLib": false,
+    "useDefineForClassFields": false,
     "experimentalDecorators": true,
-    "useDefineForClassFields": false
+    "module": "ESNext",
+    "moduleResolution": "node",
+    "strictNullChecks": true,
+    "noImplicitAny": false,
+    "noUnusedLocals": true,
+    "removeComments": true,
+    "disableSizeLimit": true,
+    "sourceMap": true,
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true
   },
   "include": [
     "typings/*.d.ts",
@@ -29,5 +30,4 @@
   "exclude": [
     "dist"
   ]
- }
- 
+}
