--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@antv/x6": "^2.18.1",
+    "@antv/x6-vue-shape": "^2.1.2",
     "@arcgis/core": "^4.31.5",
     "@element-plus/icons-vue": "^2.3.1",
     "@skzz/platform": "0.0.0-alpha.73",
