--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "tsx": "^4.19.2",
     "unbuild": "^2.0.0",
     "unocss": "^0.64.1",
+    "unocss-preset-vunk": "^1.0.4",
     "unplugin-oxlint": "^0.7.3",
     "unplugin-vue-markdown": "^0.26.2",
     "vike": "0.4.204",
