--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "@antv/x6": "^2.18.1",
     "@antv/x6-plugin-selection": "^2.2.2",
     "@antv/x6-vue-shape": "^2.1.2",
-    "@arcgis/core": "^4.31.5",
     "@element-plus/icons-vue": "^2.3.1",
     "@skzz/platform": "0.0.0-alpha.73",
     "@vuesri/core": "^1.0.59",
@@ -35,11 +34,12 @@
     "@vunk-x6/composables": "workspace:*",
     "@vunk-x6/shared": "workspace:*",
     "@vunk/core": "1.2.3",
-    "@vunk/form": "^2.5.0",
+    "@vunk/form": "^2.5.2",
     "@vunk/plus": "^0.2.0",
     "@vunk/shared": "^0.5.49",
     "@vunk/skzz": "0.0.0-alpha.111",
     "@vunk/x6": "workspace:*",
+    "deepdash-es": "^5.3.9",
     "element-plus": "npm:element-plus@latest",
     "three": "^0.170.0",
     "vue": "^3.5.13"
@@ -55,7 +55,6 @@
     "@vitejs/plugin-vue": "^5.2.0",
     "@vitejs/plugin-vue-jsx": "^4.1.0",
     "@vue/compiler-sfc": "^3.5.13",
-    "arcgis-js-api": "^4.31.5",
     "comment-parser": "^1.4.1",
     "eslint": "^9.15.0",
     "eslint-plugin-oxlint": "^0.13.0",
