--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@vunk-x6/composables": "workspace:*",
     "@vunk-x6/shared": "workspace:*",
     "@vunk/core": "1.2.3",
-    "@vunk/form": "^2.5.2",
+    "@vunk/form": "^2.5.3",
     "@vunk/plus": "^0.2.0",
     "@vunk/shared": "^0.5.49",
     "@vunk/skzz": "0.0.0-alpha.111",
@@ -62,6 +62,7 @@
     "gulp": "^5.0.0",
     "gulp-concat": "^2.6.1",
     "mri": "^1.2.0",
+    "openai": "^4.85.4",
     "oxlint": "^0.13.0",
     "pinia": "^2.2.6",
     "pinia-plugin-persist": "^1.0.0",
